appId: com.blitzapp.alenga.alse
---
- runFlow: ../subflows/launch-app.yaml
- runFlow: ../subflows/login.yaml
- runFlow: ../subflows/open-settings.yaml
- scrollUntilVisible:
    element:
      id: "settings-security"
    direction: DOWN
- tapOn:
    id: "settings-security"
- assertVisible: "Security & Privacy"
